# MCP_Project

./: .gitignore  Ideas.txt  README.md  classification_gradio_ui.py  finalHackathon.py  pyproject.toml  requirements.txt  sample_house_prices.csv  sample_loan_approval.csv  updated_ML.py  withNebius.py
