[project]
name = "ml-model-trainer-mcp"
version = "1.0.0"
description = "MCP server for training ML models on CSV data with Gradio interface"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.9.2",
    "gradio[mcp]>=4.0.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "Pillow>=10.0.0",
    "python-dotenv>=1.0.0",
]
